--- a/src/FlatMate.Web/Views/Shared/Error.cshtml
+++ b/src/FlatMate.Web/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlatMate.Web.Common.Base.BaseViewModel
+﻿@model FlatMate.Web.Mvc.Base.BaseViewModel
 @{
     ViewData["Title"] = "Error";
 }
