--- a/src/FlatMate.Web/wwwroot/css/shared/form.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/form.scss
@@ -1,3 +1,88 @@
-﻿form {
+﻿@import '../var/colors.scss';
+@import '../var/sizes.scss';
+
+form {
+    border: 0;
+    box-sizing: border-box;
+    display: block;
     max-width: 500px;
+    width: 100%;
+}
+
+fieldset {
+    border: 0;
+    box-sizing: border-box;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: .25rem;
+}
+
+input {
+    border: 0;
+    border-radius: 0;
+    box-sizing: border-box;
+    display: block;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+input[type=text] {
+    border-radius: $border-radius;
+    border: $border-thickness $color-border solid;
+    height: 2rem;
+    padding: 0rem .5rem;
+    transition: border linear 0.15s;
+}
+
+button,
+input[type=submit] {
+    display: initial;
+    font-weight: bold;
+    height: 2rem;
+    min-width: 150px;
+    padding: 0rem .5rem;
+    width: initial;
+}
+
+input[type='email']:focus,
+input[type='number']:focus,
+input[type='password']:focus,
+input[type='search']:focus,
+input[type='tel']:focus,
+input[type='text']:focus,
+input[type='url']:focus,
+textarea:focus, select:focus {
+    border-color: $color-primary;
+    outline: none;
+}
+
+button:focus,
+input[type=submit]:focus {
+    outline: none;
+}
+
+.form-group {
+    margin-bottom: 1rem;
+}
+
+.btn-primary {
+    background-color: $color-primary;
+    color: white;
+    transition: background-color linear 0.15s;
+}
+
+.btn-primary:hover {
+    background-color: darken($color-primary, 5%);
+    color: white;
+}
+
+.btn-primary:focus {
+    box-shadow: inset 0 1px 10px rgba(0,0,0,.3);
 }
