--- a/src/FlatMate.Web/wwwroot/css/shared/main.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/main.scss
@@ -1,19 +1,48 @@
-﻿@import 'colors.scss';
+﻿@import '../var/colors.scss';
+@import '../var/font.scss';
 
 html, body {
-    max-width: 100vw;
-    min-height: 100vh;
+    color: #606c76;
+    font-family: $font-family-sans-serif;
+    font-size: $font-size;
+    font-weight: $font-weight;
+}
+
+html, body {
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
 
-button {
+.container {
+    margin: 0 auto;
+    max-width: 1020px;
+    padding: 0 1rem;
+    position: relative;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    margin-bottom: .5rem;
+    font-weight: 500;
+    line-height: 1.1;
+}
+
+.align-right {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.align-center {
+    display: flex;
+    justify-content: center;
+}
+
+/*button {
     width: auto;
-}
-
-input[type='email']:focus, input[type='number']:focus, input[type='password']:focus, input[type='search']:focus, input[type='tel']:focus, input[type='text']:focus, input[type='url']:focus, textarea:focus, select:focus {
-    border-color: $color-primary;
 }
 
 .button, button, input[type='button'], input[type='reset'], input[type='submit'] {
@@ -59,4 +88,4 @@ div {
             margin-right: 2rem;
         }
     }
-}
+}*/
