--- a/src/FlatMate.Web/wwwroot/css/shared/milligram.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/milligram.scss
@@ -6,12 +6,12 @@
  * Licensed under the MIT license
 */
 
-@import '../colors.scss';
-@import '../sizes.scss';
+@import 'colors.scss';
+@import 'sizes.scss';
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%;
+    font-size: 12px;
 }
 
 body {
@@ -255,10 +255,9 @@ select {
     -moz-appearance: none;*/
     background-color: transparent;
     border: 0.1rem solid darken($color-border, 10%);
-    border-radius: 0.4rem;
     box-shadow: none;
-    height: 3.8rem;
-    padding: 0.6rem 1rem;
+    height: 2rem;
+    padding: 1rem 1rem;
     width: 100%;
 }
 
