--- a/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
@@ -1,5 +1,5 @@
-﻿@import "../colors.scss";
-@import "../sizes.scss";
+﻿@import "../var/colors.scss";
+@import "../var/sizes.scss";
 
 $nav-width: 20em;
 $nav-width-small: 15em;
