--- a/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/navigation.scss
@@ -1,40 +1,25 @@
 ﻿@import "../var/colors.scss";
 @import "../var/sizes.scss";
 
-$nav-width: 20em;
-$nav-width-small: 15em;
-
-$icon-burger-size: 32px;
-
-/* large devices */
 @media all and (min-width: 1201px) {
-    nav {
+    #menu-checkbox:not(:checked) ~ nav {
         width: $nav-width;
     }
 
-    #menu-checkbox:not(:checked) ~ main {
-        margin-left: $nav-width;
-        width: calc(100% - #{$nav-width});
-    }
-
-    #menu-checkbox:checked ~ main {
-        margin-left: 0;
-        width: 100%;
+    #menu-checkbox:checked ~ nav {
+        width: 0;
     }
 }
 
-/* medium devices */
+
 @media all and (max-width: 1200px) {
-    nav {
-        width: $nav-width-small;
+    #menu-checkbox:not(:checked) ~ nav {
+        width: 0;
     }
 
-    #menu-checkbox:not(:checked) ~ main {
-        margin-left: 0;
-    }
-
-    #menu-checkbox:checked ~ main {
-        margin-left: $nav-width-small;
+    #menu-checkbox:checked ~ nav {
+        width: $nav-width;
+        max-width: 100vw;
     }
 }
 
@@ -42,20 +27,12 @@ nav {
     height: 100vh;
     position: fixed;
     overflow: hidden;
-    background-color: $color-background;
+    background-color: #fff;
+    padding-top: 64px;
     border-right: 1px solid $color-border;
     box-shadow: 0 0 5px $color-border;
-    z-index: 1;
-
-    .title {
-        display: block;
-        margin-top: 1rem;
-        font-weight: 300;
-        margin-left: calc(#{$icon-burger-size} + 1em);
-        line-height: $icon-burger-size;
-        font-size: $icon-burger-size;
-        margin-bottom: 1rem;
-    }
+    z-index: 10;
+    transition: width ease-out .25s;
 
     ul {
         list-style: none;
@@ -77,32 +54,21 @@ nav {
 
             &:hover {
                 color: #fff;
-                background-color: $color-primary;
+                background-color: lighten($color-primary, 10%);
                 transition: all linear .2s;
             }
         }
     }
 }
 
-#menu-checkbox {
-    display: none;
+nav + main {
+    padding-top: 64px;
 }
 
 .menu-toggle {
-    position: fixed;
-    top: 1rem;
-    left: 1rem;
-    cursor: pointer;
-    margin: 0;
-    z-index: 200;
+    margin: 0 1rem;
 
-    input {
-        display: none;
+    label {
+        cursor: pointer;
     }
-}
-
-nav + main {
-    padding-top: calc(2rem + #{$icon-burger-size});
-    padding-bottom: calc(2rem + #{$icon-burger-size});
-    transition: margin-left .25s ease-out, width .25s ease-out;
 }
