--- a/src/FlatMate.Web/wwwroot/css/var/colors.scss
+++ b/src/FlatMate.Web/wwwroot/css/var/colors.scss
@@ -1,9 +1,11 @@
-﻿$color-primary: #1c84c6;
-$color-success: #1ab394;
-$color-info: #23c6c8;
-$color-warning: #f8ac59;
-$color-danger: #ed5565;
+﻿$color-primary: #1A8EE9;
+$color-success: #5cb85c;
+$color-info: #5bc0de;
+$color-warning: #f0ad4e;
+$color-danger: #d9534f;
 
-$color-font: #606c76;
+/*$color-font: #606c76;*/
+$color-font: #000;
 $color-border: #d1d1d1;
 $color-background: #f4f5f6;
+$color-font-input: #55595c;
