--- a/src/FlatMate.Web/wwwroot/css/shared/form.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/form.scss
@@ -20,34 +20,37 @@ fieldset {
 
 label {
     display: inline-block;
-    margin-bottom: .25rem;
+    margin-bottom: .3rem;
 }
 
 input {
     border: 0;
     border-radius: 0;
     box-sizing: border-box;
+    color: $color-font-input;
     display: block;
+    font: inherit;
     margin: 0;
     padding: 0;
     width: 100%;
 }
 
-input[type=text] {
+input[type=text],
+input[type=password],
+input[type=email] {
     border-radius: $border-radius;
     border: $border-thickness $color-border solid;
-    height: 2rem;
-    padding: 0rem .5rem;
+    box-shadow: inset 0 0 5px rgba(0,0,0,.1);
+    line-height: 1.25;
+    padding: .5rem .5rem;
     transition: border linear 0.15s;
 }
 
 button,
 input[type=submit] {
     display: initial;
-    font-weight: bold;
-    height: 2rem;
-    min-width: 150px;
-    padding: 0rem .5rem;
+    min-width: 100px;
+    padding: .3rem .5rem;
     width: initial;
 }
 
