--- a/src/FlatMate.Web/wwwroot/css/var/font.scss
+++ b/src/FlatMate.Web/wwwroot/css/var/font.scss
@@ -1,4 +1,5 @@
 ﻿$font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Helvetica Neue", Arial, sans-serif !default;
 $font-size: 16px;
+$font-size-small: 14px;
 $font-weight: 400;
 
