--- a/src/FlatMate.Web/Areas/Home/Views/Dashboard/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Home/Views/Dashboard/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
     Layout = "_Layout";
-    ViewData["Title"] = "Übersicht";
-    ViewData["PageTitle"] = "Übersicht";
+    ViewData["Title"] = "Mein Dashboard";
+    ViewData["PageTitle"] = "Mein Dashboard";
 }
