--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
@@ -1,18 +1,21 @@
-﻿@model FlatMate.Web.Areas.Account.Data.ChangePasswordVm
+﻿@model FlatMate.Web.Areas.Lists.Data.ItemListCreateVm
 
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Passwort ändern";
-    ViewData["PageTitle"] = "Passwort ändern";
+    ViewData["Title"] = "Liste erstellen";
+    ViewData["PageTitle"] = "Liste erstellen";
 }
 
 <section class="container">
+
     <div class="flex-row actions">
-        <a asp-action="Index">< Mein Profil</a>
+        <a href="javascript:history.back()">Zurück</a>
     </div>
+
 </section>
 
 <section class="container centered-form">
+
     <div class="alert-wrapper">
         @if (Model.IsError)
         {
@@ -24,27 +27,26 @@
         }
     </div>
 
-    <form asp-area="Account" asp-controller="MyProfile" asp-action="ChangePassword" method="post">
+    <form asp-area="Lists" asp-controller="ItemList" asp-action="Create" method="post">
         <fieldset>
 
             <div class="form-group">
-
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" required/>
+                <label asp-for="Name"></label>
+                <input asp-for="Name" required />
             </div>
 
             <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" required/>
+                <label asp-for="Description"></label>
+                <input asp-for="Description" />
             </div>
 
             <div class="form-group">
-                <label asp-for="NewPasswordConfirmation"></label>
-                <input asp-for="NewPasswordConfirmation" required/>
+                <label asp-for="IsPublic"></label>
+                <input asp-for="IsPublic" />
             </div>
 
             <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Ändern">
+                <input class="btn-primary" type="submit" value="Erstellen">
             </div>
 
         </fieldset>
