--- a/src/FlatMate.Web/wwwroot/css/shared/form.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/form.scss
@@ -1,6 +1,20 @@
 ﻿@import '../var/colors.scss';
 @import '../var/sizes.scss';
 
+@mixin btn-variant($color) {
+    background-color: $color;
+    color: white;
+
+    &:hover {
+        background-color: darken($color, 5%);
+        color: white;
+    }
+
+    &:focus {
+        box-shadow: inset 0 1px 10px rgba(0,0,0,.3);
+    }
+}
+
 form {
     border: 0;
     box-sizing: border-box;
@@ -25,7 +39,7 @@ label {
 
 input {
     border: 0;
-    border-radius: 0;
+    border-radius: $border-radius;
     box-sizing: border-box;
     color: $color-font-input;
     display: block;
@@ -38,7 +52,6 @@ input {
 input[type=text],
 input[type=password],
 input[type=email] {
-    border-radius: $border-radius;
     border: $border-thickness $color-border solid;
     box-shadow: inset 0 0 5px rgba(0,0,0,.1);
     line-height: 1.25;
@@ -46,12 +59,19 @@ input[type=email] {
     transition: border linear 0.15s;
 }
 
+.btn,
 button,
 input[type=submit] {
-    display: initial;
+    display: block;
     min-width: 100px;
     padding: .3rem .5rem;
-    width: initial;
+    text-align:center;
+    transition: background-color linear 0.15s;    
+    width: auto;
+}
+
+input[type=checkbox] {
+    width: unset;
 }
 
 input[type='email']:focus,
@@ -76,16 +96,9 @@ input[type=submit]:focus {
 }
 
 .btn-primary {
-    background-color: $color-primary;
-    color: white;
-    transition: background-color linear 0.15s;
+    @include btn-variant($color-primary);
 }
 
-.btn-primary:hover {
-    background-color: darken($color-primary, 5%);
-    color: white;
-}
-
-.btn-primary:focus {
-    box-shadow: inset 0 1px 10px rgba(0,0,0,.3);
+.btn-danger {
+    @include btn-variant($color-danger);
 }
