--- a/src/FlatMate.Web/wwwroot/css/shared/layout.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/layout.scss
@@ -1,6 +1,13 @@
-﻿@media all and (max-width: 768px) {
+﻿@import '../var/colors.scss';
+@import '../var/sizes.scss';
+
+.welcome-wrapper {
+    display: none;
+}
+
+@media all and (min-width: 769px) {
     .welcome-wrapper {
-        display: none;
+        display: block;
     }
 }
 
@@ -15,5 +22,19 @@
         display: flex;
         flex-direction: column;
         max-width: 500px;
+    }
+}
+
+.actions {
+    margin-bottom: 1rem;
+
+    a {
+        border-bottom: 2px $color-border solid;
+        margin: 0 .5rem 0 0;
+        padding: .5rem;
+
+        &:hover {
+            border-bottom: 2px darken($color-border, 15%) solid;
+        }
     }
 }
