--- a/src/FlatMate.Web/wwwroot/css/var/sizes.scss
+++ b/src/FlatMate.Web/wwwroot/css/var/sizes.scss
@@ -1,7 +1,7 @@
-﻿$border-radius: 0rem;
+﻿$border-radius: 0;
 $border-thickness: .1rem;
 
-$nav-width: 20em;
+$nav-width: 15em;
 $nav-width-small: 15em;
 
 $icon-burger-size: 32px;
