- refactoring - list frontend

--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -17,3 +17,13 @@
     </div>
 
 </section>
+
+@section viewData {
+    @Json.Serialize(Model.List)
+}
+
+@section pageScript {
+    <script type="text/javascript">
+        new Flatmate.Areas.Lists.ItemListEditor();
+    </script>
+}
