--- a/src/FlatMate.Web/wwwroot/css/shared/table.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/table.scss
@@ -60,12 +60,12 @@ div.table {
         .cell {
             display: table-cell;
             border-bottom: .1rem solid $color-border;
-            padding: 1.2rem 1.5rem;
+            padding: .5rem .5rem;
             vertical-align: middle;
 
             &.icon {
                 width: 32px;
-                padding: 1.2rem 0;
+                padding: .5rem 0;
                 text-align: center;
             }
 
