--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -3,75 +3,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - FlatMate</title>
 
     <environment names="Development">
-        <link rel="stylesheet" asp-href-include="~/dist/css/**/*.css" />
-        <script asp-src-include="~/dist/js/**/*.js" type="text/javascript"></script>
+        <link rel="stylesheet" asp-href-include="~/dist/flatmate.css"/>
+        <script asp-src-include="~/node_modules/knockout/build/output/knockout-latest.js" type="text/javascript"></script>
+        <script asp-src-include="~/dist/flatmate.js" type="text/javascript"></script>
     </environment>
 
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="~/dist/css/flatmate.min.css" asp-append-version="true" />
+        <link rel="stylesheet" asp-href-include="~/dist/flatmate.min.css"/>
+        <script asp-src-include="~/dist/flatmate.min.js" type="text/javascript"></script>
     </environment>
 
 </head>
 <body>
-    <header>
-        <div class="header-wrapper">
-            <div class="page-title">
-                <h1>@ViewData["PageTitle"]</h1>
+<header>
+    <div class="header-wrapper">
+        <div class="page-title">
+            <h1>@ViewData["PageTitle"]</h1>
+        </div>
+        <div class="flex-row nav-toggle">
+            <div class="menu-toggle">
+                <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
             </div>
-            <div class="flex-row nav-toggle">
-                <div class="menu-toggle">
-                    <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
-                </div>
 
-                <div class="welcome-wrapper">
-                    @if (Model.CurrentUser != null)
-                    {
-                        <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
-                    }
-                    else
-                    {
-                        <span class="welcome">Hallo!</span>
-                    }
-                </div>
-
+            <div class="welcome-wrapper">
+                @if (Model.CurrentUser != null)
+                {
+                    <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
+                }
+                else
+                {
+                    <span class="welcome">Hallo!</span>
+                }
             </div>
 
         </div>
-    </header>
 
-    <input id="menu-checkbox" type="checkbox" style="display: none" />
+    </div>
+</header>
 
-    <nav>
-        <ul>
-            <li>
-                <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
-            </li>
-            <li>
-                <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
-            </li>
-            <li>
-                <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
-            </li>
-            <li>
-                <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
-            </li>
-        </ul>
-    </nav>
+<input id="menu-checkbox" type="checkbox" style="display: none"/>
 
-    <main>
-        @RenderBody()
-    </main>
+<nav>
+    <ul>
+        <li>
+            <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+        </li>
+        <li>
+            <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
+        </li>
+        <li>
+            <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
+        </li>
+        <li>
+            <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
+        </li>
+    </ul>
+</nav>
 
-    <script type="text/json" id="viewData">
+<main>
+    @RenderBody()
+</main>
+
+<script type="text/json" id="view-data">
         @(await RenderSectionAsync("viewData", false))
     </script>
 
-    @(await RenderSectionAsync("pageScript", false))
+@(await RenderSectionAsync("pageScript", false))
 
 </body>
 </html>
