--- a/src/FlatMate.Web/wwwroot/css/flatmate.scss
+++ b/src/FlatMate.Web/wwwroot/css/flatmate.scss
@@ -1,5 +1,4 @@
-﻿//@import 'shared/milligram.scss';
-@import 'shared/main.scss';
+﻿@import 'shared/main.scss';
 @import 'shared/form.scss';
 @import 'shared/icons.scss';
 @import 'shared/table.scss';
