--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <environment names="Development">
         <link rel="stylesheet" asp-href-include="~/dist/flatmate.css"/>
         <script asp-src-include="~/node_modules/knockout/build/output/knockout-latest.js" type="text/javascript"></script>
+        <script asp-src-include="~/node_modules/atomicjs/dist/atomic.js" type="text/javascript"></script>
         <script asp-src-include="~/dist/flatmate.js" type="text/javascript"></script>
     </environment>
 
