--- a/src/FlatMate.Web/wwwroot/css/shared/milligram.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/milligram.scss
@@ -6,8 +6,8 @@
  * Licensed under the MIT license
 */
 
-@import 'colors.scss';
-@import 'sizes.scss';
+@import '../var/colors.scss';
+@import '../var/sizes.scss';
 
 html {
     box-sizing: border-box;
