--- a/src/FlatMate.Web/Views/_ViewImports.cshtml
+++ b/src/FlatMate.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using FlatMate.Web.Mvc.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-@inject IJsonService Json
+@inject IJsonService JsonService
