--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Update.cshtml
@@ -9,7 +9,7 @@
 <section class="container">
 
     <div class="flex-row actions">
-        <a href="javascript:history.back()">Zurück</a>
+        <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@Model.Id">Zur Liste</a>
     </div>
 
 </section>
