- working on itemlist

--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
@@ -16,11 +16,11 @@
     <div class="alert-wrapper">
         @if (Model.IsError)
         {
-            <div class="alert alert-danger">@Model.ErrorMessage</div>
+            <div class="alert alert-danger">@Model.Result.Message</div>
         }
         else if (Model.IsSuccess)
         {
-            <div class="alert alert-success">@Model.SuccessMessage</div>
+            <div class="alert alert-success">@Model.Result.Message</div>
         }
     </div>
 
