--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -1,5 +1,4 @@
-﻿@using FlatMate.Web.Mvc.Json
-@model FlatMate.Web.Areas.Lists.Data.ItemListViewVm
+﻿@model FlatMate.Web.Areas.Lists.Data.ItemListViewVm
 
 @{
     Layout = "_Layout";
