--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -17,6 +17,17 @@
 
 <section class="container">
 
+    <div class="alert-wrapper">
+        @if (Model.IsError)
+        {
+            <div class="alert alert-danger">@Model.Result.Message</div>
+        }
+        else if (Model.IsSuccess)
+        {
+            <div class="alert alert-success">@Model.Result.Message</div>
+        }
+    </div>
+
     <table>
         <thead>
         <tr>
