--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/View.cshtml
@@ -37,7 +37,7 @@
                         </div>*@
                 </div>
                 <div class="cell icon">
-                    <a class="icon-24 icon-cross-circle"></a>
+                    <a class="icon-24 icon-cross-circle" data-bind="click: $component.removeGroup"></a>
                 </div>
             </div>
 
@@ -65,10 +65,10 @@
 
             <div class="row">
                 <div class="cell" style="padding-left:calc(1rem + 16px)">
-                    <input type="text" placeholder="Neuen Eintrag hinzufügen" />
+                    <input type="text" placeholder="Neuen Eintrag hinzufügen" data-bind="textInput: $component.newItemName, enterkey: $component.addItem"/>
                 </div>
                 <div class="cell icon">
-                    <a class="icon-24 icon-plus-circle"></a>
+                    <a class="icon-24 icon-plus-circle" data-bind="click: $component.addItem"></a>
                 </div>
                 <div class="cell icon"></div>
             </div>
@@ -78,10 +78,10 @@
 
         <div class="row">
             <div class="cell">
-                <input type="text" placeholder="Neue Gruppe hinzufügen" data-bind="textInput: newGroupName, enterkey:addGroup" />
+                <input type="text" placeholder="Neue Gruppe hinzufügen" data-bind="textInput: $component.newGroupName, enterkey: $component.addGroup" />
             </div>
             <div class="cell icon">
-                <a class="icon-24 icon-plus-circle" data-bind="click: addGroup"></a>
+                <a class="icon-24 icon-plus-circle" data-bind="click: $component.addGroup"></a>
             </div>
             <div class="cell icon"></div>
         </div>
