- cleanup - enabled test projects

--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/Index.cshtml
@@ -27,7 +27,7 @@
         <div class="informations">
             <div class="flex-row">
                 <div class="key">Email</div>
-                <div class="value">@Model.UserJso.Email</div>
+                @*<div class="value">@Model.UserJso.Email</div>*@
             </div>
 
         </div>
