--- a/src/FlatMate.Web/Views/Shared/_Layout.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_Layout.cshtml
@@ -3,69 +3,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FlatMate</title>
 
-    <link asp-href-include="~/dist/bundle.css" rel="stylesheet"/>
-    <script asp-src-include="~/dist/bundle.js" type="text/javascript"></script>
+    <link asp-href-include="~/dist/app.css" rel="stylesheet" />
 
 </head>
 <body>
-<header>
-    <div class="header-wrapper">
-        <div class="page-title">
-            <h1>@ViewData["PageTitle"]</h1>
-        </div>
-        <div class="flex-row nav-toggle">
-            <div class="menu-toggle">
-                <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
+    <header>
+        <div class="header-wrapper">
+            <div class="page-title">
+                <h1>@ViewData["PageTitle"]</h1>
+            </div>
+            <div class="flex-row nav-toggle">
+                <div class="menu-toggle">
+                    <label class=" icon-32 icon-burger" for="menu-checkbox"></label>
+                </div>
+
+                <div class="welcome-wrapper">
+                    @if (Model.CurrentUser != null)
+                    {
+                        <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
+                    }
+                    else
+                    {
+                        <span class="welcome">Hallo!</span>
+                    }
+                </div>
+
             </div>
 
-            <div class="welcome-wrapper">
-                @if (Model.CurrentUser != null)
-                {
-                    <span class="welcome">Hallo @Model.CurrentUser.UserName!</span>
-                }
-                else
-                {
-                    <span class="welcome">Hallo!</span>
-                }
-            </div>
-
         </div>
+    </header>
 
-    </div>
-</header>
+    <input id="menu-checkbox" type="checkbox" style="display: none" />
 
-<input id="menu-checkbox" type="checkbox" style="display: none"/>
+    <nav>
+        <ul>
+            <li>
+                <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+            </li>
+            <li>
+                <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
+            </li>
+            <li>
+                <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
+            </li>
+            <li>
+                <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
+            </li>
+        </ul>
+    </nav>
 
-<nav>
-    <ul>
-        <li>
-            <a asp-area="Home" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
-        </li>
-        <li>
-            <a asp-area="Lists" asp-controller="ItemList" asp-action="My">Listen</a>
-        </li>
-        <li>
-            <a asp-area="Account" asp-controller="MyProfile" asp-action="Index">Profil</a>
-        </li>
-        <li>
-            <a asp-area="Account" asp-controller="Logout" asp-action="Index">Logout</a>
-        </li>
-    </ul>
-</nav>
+    <main>
+        @RenderBody()
+    </main>
 
-<main>
-    @RenderBody()
-</main>
 
-<script type="text/json" id="view-data">
+    <script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
+    <script asp-src-include="~/dist/app.js" type="text/javascript"></script>
+
+    <script type="text/json" id="view-data">
         @(await RenderSectionAsync("viewData", false))
     </script>
 
-@(await RenderSectionAsync("pageScript", false))
+    @(await RenderSectionAsync("pageScript", false))
 
 </body>
 </html>
