--- a/src/FlatMate.Web/wwwroot/css/shared/table.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/table.scss
@@ -27,7 +27,7 @@ th, td {
 
 th {
     border-bottom: 3px solid $color-border;
-    font-weight:400;
+    font-weight: 400;
 }
 
 td {
@@ -78,5 +78,13 @@ div.table {
 
     input {
         margin-bottom: 0;
+    }
+
+    .draggable {
+        cursor: move;
+    }
+
+    .dragging {
+        box-shadow: inset 0 0 10px #DDD;
     }
 }
